# camdict-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: rust.yml
src/: main.rs
