[package]
name = "camdict_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }
scraper = "0.20"
# console = "0.15.8"
colored = "2.1.0"
clap = { version = "4.5.0", features = ["derive"] }
regex = "1.10.3"
